grammar.ebnf
statement ::= expression ('=' sub_statement)* | '$ast' | '$symbol'
sub_statement ::= expression ('=' sub_statement)*
expression ::= term (('+'|'-') term )*
term::= factor ( ('*'|'/') factor )*
factor ::= '(' expression ')'| sub '(' expression ',' expression ',' expression ')' | ('+'|'-') unsigned_factor | string | num | variable  
unsigned_factor ::= '(' expression ')' | num | variable
num ::= int | real
